--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "prepush": "prisma db push"
+    "prepush": "prisma db push",
+    "debug": "NODE_OPTIONS='--inspect' next dev"
   },
   "dependencies": {
     "@prisma/client": "^4.2.1",
@@ -16,10 +17,14 @@
     "@trpc/next": "^9.27.0",
     "@trpc/react": "^9.27.0",
     "@trpc/server": "^9.27.0",
+    "date-fns": "^2.29.2",
+    "gray-matter": "^4.0.3",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
