--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/react": "^9.27.0",
     "@trpc/server": "^9.27.0",
     "date-fns": "^2.29.2",
+    "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -29,6 +30,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/glob": "^7.2.0",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
