--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "next": "12.2.5",
+    "next-mdx-remote": "^4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
