--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-highlight": "^5.0.2",
+    "rehype-slug": "^5.0.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "superjson": "^1.9.1",
